# meshfs

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/actions/minio-integration-setup/: action.yml
.github/workflows/: _apple-containerization-smoke-reusable.yml  _fuse-smoke-reusable.yml  _integration-reusable.yml  _minio-integration-reusable.yml  _unit-reusable.yml  ci-coverage.yml  ci-heavy.yml  ci-pr.yml  ci.yml  npm-release.yml  release.yml
crates/meshfs/: Cargo.toml
crates/meshfs-client/: Cargo.toml
crates/meshfs-client/src/: main.rs
crates/meshfs-control-plane/: Cargo.toml
crates/meshfs-control-plane-core/: Cargo.toml
crates/meshfs-control-plane-core/src/: auth.rs  error.rs  state.rs
crates/meshfs-control-plane-runtime-cloudflare-workers/: Cargo.toml  README.md
crates/meshfs-control-plane-runtime-cloudflare-workers/src/: lib.rs
crates/meshfs-control-plane/src/: auth.rs  config.rs  error.rs  lib.rs  main.rs  routes.rs
crates/meshfs-integration-tests/: Cargo.toml
crates/meshfs-integration-tests/src/: lib.rs
crates/meshfs-integration-tests/tests/: core.rs  minio_s3.rs  sync_ws_resume.rs
crates/meshfs-integration-tests/tests/support/: mod.rs
crates/meshfs-store/: Cargo.toml
crates/meshfs-store/src/: lib.rs
crates/meshfs-types/: Cargo.toml
crates/meshfs-types/src/: lib.rs
crates/meshfs/src/: deploy.rs  fuse_mount.rs  main.rs
deploy/providers/cloudflare-workers-free-tier/: README.md  package.json
deploy/providers/cloudflare-workers-free-tier/d1/: schema.sql
deploy/providers/cloudflare-workers-free-tier/worker-bundle/: README.md
docs/: control-plane-architecture.md  deployment-providers.md  editions.md  provider-user-guide.md  tmp-production-implementation-checklist.md  user-guide.md
docs/providers/: README.md  aws-ec2.md  aws-ecs.md  azure-container-apps.md  cloudflare-containers.md  cloudflare-workers-free-tier.md  gcp-cloud-run.md  selfhost-native.md
scripts/: deploy-cloudflare.sh  deploy-provider.sh
scripts/ci/: run_apple_containerization_smoke.sh  run_fuse_smoke.sh
scripts/providers/: deploy-cloudflare-workers-free-tier.sh
