[workspace]
members = [
  "crates/meshfs-types",
  "crates/meshfs-store",
  "crates/meshfs-control-plane-core",
  "crates/meshfs-control-plane",
  "crates/meshfs-client",
  "crates/meshfs-control-plane-runtime-cloudflare-workers",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["MeshFS Contributors"]

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros", "ws"] }
base64 = "0.22"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
futures = "0.3"
hmac = "0.12"
http = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "signal"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde", "js"] }
aws-config = "1"
aws-sdk-s3 = "1"
aws-smithy-types = "1"
url = "2"
webbrowser = "1"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
fuser = "0.14"
libc = "0.2"
