[package]
name = "meshfs-client"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = []
fuse = ["dep:fuser", "dep:libc"]

[dependencies]
anyhow.workspace = true
base64.workspace = true
clap.workspace = true
fuser = { workspace = true, optional = true }
futures.workspace = true
libc = { workspace = true, optional = true }
meshfs-types = { path = "../meshfs-types" }
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
webbrowser.workspace = true

[dev-dependencies]
axum.workspace = true
chrono.workspace = true
