[package]
name = "meshfs-integration-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
base64.workspace = true
futures.workspace = true
meshfs-types = { path = "../meshfs-types" }
reqwest.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true

[dev-dependencies]
tempfile = "3"
